Try to fix hover on mobile (#20)

--- a/src/styles.css
+++ b/src/styles.css
@@ -163,7 +163,7 @@ input {
   padding: 10px;
   border-radius:10px;
 }
-.item-container:hover {
+.item-container:hover, .item-container:active{
   box-shadow: 0 0 11px rgba(33,33,33,.2);
 }
 
